crates/salvo-backend-rust/tests/snapshots/codegen_tests__golden_demo_rust.snap
---
source: crates/salvo-backend-rust/tests/codegen_tests.rs
expression: combined
---
// ===== core/console.rs =====

pub trait Console {
    fn print(&mut self, message: &String);
}

pub struct StdOutConsole {
}

impl StdOutConsole {
    pub fn new() -> Self {
        Self { }
    }
}

impl Console for StdOutConsole {
    fn print(&mut self, message: &String) {
        print!("{}", message)
    }
}

pub fn println(console: &mut dyn Console, message: &String) {
    console.print(message);
    console.print(&("\n".to_string()));
}

// ===== main.rs =====
#![allow(non_snake_case, non_camel_case_types, unused_mut, unused_parens, unused_imports, dead_code, unreachable_code, unused_variables, path_statements, unused_must_use, suspicious_double_ref_op)]
#[path = "iter.rs"]
pub mod iter;
#[path = "core/console.rs"]
pub mod core_console;

use crate::core_console::*;
use crate::iter::*;

#[derive(Clone, Debug)]
pub struct Person {
    pub name: String,
    pub surname: Option<String>,
    pub age: i32,
}

pub fn full_name(person: &Person) -> String {
    if person.surname.is_some() {
        let mut surname = person.surname.as_ref().unwrap().clone();
        return format!("{} {}", person.name.clone(), surname);
    }
    return person.name.clone();
}

pub fn greet(console: &mut dyn Console, person: &Person) {
    println(console, &(format!("Hello, {}!", full_name(person))));
    for mut i in range(1, 4) {
        println(console, &(format!("  {}: {}", i, person.age + i)));
    }
}

pub fn range(start: i32, end: i32) -> SalvoIter<i32> {
    let __c_start = start;
    let __c_end = end;
    SalvoIter::from_factory(std::rc::Rc::new(move || {
        Box::new(__Pass_range::new(__c_start.clone(), __c_end.clone()))
    }))
}

pub fn main() {
    let mut console = StdOutConsole::new();
    let mut person = Person { name: "Roland".to_string(), surname: Some("Elliott".to_string()), age: 36 };
    greet(&mut console, &person);
    let mut anon = Person { surname: None, ..person.clone() };
    greet(&mut console, &anon);
    let mut names = vec!["a".to_string(), "b".to_string()];
    println(&mut console, &(format!("first: {}", names.first().unwrap())));
    let mut mut_names = vec!["x".to_string()];
    mut_names.push("y".to_string());
    println(&mut console, &(format!("size: {}", (mut_names.len() as i32))));
}

struct __Pass_range {
    start: i32,
    end: i32,
    i: i32,
    __state: u32,
}

impl __Pass_range {
    fn new(start: i32, end: i32) -> Self {
        Self {
            start,
            end,
            i: 0,
            __state: 0,
        }
    }

    fn __advance(&mut self) -> Option<i32> {
        loop {
            match self.__state {
                0 => {
                    self.i = self.start;
                    self.__state = 1;
                    continue;
                }
                1 => {
                    if !((({ let __t = self.i; self.i += 1; __t }) < self.end)) {
                        self.__state = 2;
                        continue;
                    }
                    let __v = self.i - 1;
                    self.__state = 1;
                    return Some(__v);
                }
                2 => {
                    self.__state = 2;
                    return None;
                }
                _ => return None,
            }
        }
    }

    fn __close(&mut self) {
        self.__state = 2;
    }
}

impl Iterator for __Pass_range {
    type Item = i32;
    fn next(&mut self) -> Option<i32> {
        self.__advance()
    }
}

// ===== iter.rs =====
// Generated by the Salvo compiler: the lazy iterator type.
use std::rc::Rc;

/// `Iter<T>`: a factory of passes, which is what Kotlin's `Iterable<T>` is.
///
/// A *pass* — one walk over the elements — is a struct the compiler writes
/// for each `yield` function [iter-generator], or a collection's own
/// iterator; this type is what mints one on demand, so two `for` loops over
/// the same value both start from the beginning.
pub struct SalvoIter<T>(Rc<dyn Fn() -> Box<dyn Iterator<Item = T>>>);

impl<T: Clone + 'static> SalvoIter<T> {
    pub fn from_factory(factory: Rc<dyn Fn() -> Box<dyn Iterator<Item = T>>>) -> Self {
        SalvoIter(factory)
    }

    /// A collection's `iter()`: the elements are already there, so a pass
    /// is a walk over a copy of them.
    pub fn from_vec(items: Vec<T>) -> Self {
        SalvoIter(Rc::new(move || Box::new(items.clone().into_iter())))
    }

    /// Every element, for the places that need them all at once.
    pub fn to_vec(&self) -> Vec<T> {
        (self.0)().collect()
    }
}

impl<T> Clone for SalvoIter<T> {
    fn clone(&self) -> Self {
        SalvoIter(self.0.clone())
    }
}

impl<T> std::fmt::Debug for SalvoIter<T> {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        f.write_str("Iter")
    }
}

impl<T> IntoIterator for SalvoIter<T> {
    type Item = T;
    type IntoIter = Box<dyn Iterator<Item = T>>;
    fn into_iter(self) -> Self::IntoIter {
        (self.0)()
    }
}

impl<T> IntoIterator for &SalvoIter<T> {
    type Item = T;
    type IntoIter = Box<dyn Iterator<Item = T>>;
    fn into_iter(self) -> Self::IntoIter {
        (self.0)()
    }
}
