crates/salvo-backend-rust/tests/snapshots/codegen_tests__golden_effects_rust.snap
---
source: crates/salvo-backend-rust/tests/codegen_tests.rs
expression: combined
---
// ===== core/array.rs =====
use crate::core_iterator::*;
use crate::core_list::*;
use crate::unions::*;

pub fn iter<T: Clone + 'static>(array: Vec<T>) -> ArrayYield<T> {
    return ArrayYield { items: array, at: 0 };
}

#[derive(Clone, Debug)]
pub struct ArrayYield<T: Clone + 'static> {
    pub items: Vec<T>,
    pub at: i32,
}

pub fn next<T: Clone + 'static>(p: &mut ArrayYield<T>) -> Union2<T, Finished> {
    let mut elem = p.items.get((p.at) as usize).cloned();
    if elem.is_none() {
        return Union2::<T, Finished>::U2(finished());
    }
    p.at = p.at + 1;
    return Union2::<T, Finished>::U1(emitted(elem.as_ref().unwrap().clone()));
}

// ===== core/console.rs =====
use crate::core_iterator::*;
use crate::core_string::*;

pub trait Console {
    fn print(&mut self, message: &String);
}

pub struct StdOutConsole {
}

impl StdOutConsole {
    pub fn new() -> Self {
        Self { }
    }
}

impl Console for StdOutConsole {
    fn print(&mut self, message: &String) {
        print!("{}", message)
    }
}

pub fn println(console: &mut dyn Console, message: &String) {
    console.print(message);
    console.print(&("\n".to_string()));
}

// ===== core/iterator.rs =====

#[derive(Clone, Debug)]
pub struct Finished {
}

pub fn emitted<T: Clone + 'static>(value: T) -> T {
    return value;
}

pub fn finished() -> Finished {
    return Finished {  };
}

// ===== core/list.rs =====
use crate::core_array::*;
use crate::core_iterator::*;
use crate::unions::*;

pub fn iter__2<T: Clone + 'static>(list: Vec<T>) -> ListYield<T> {
    return ListYield { items: list, at: 0 };
}

#[derive(Clone, Debug)]
pub struct ListYield<T: Clone + 'static> {
    pub items: Vec<T>,
    pub at: i32,
}

pub fn next__2<T: Clone + 'static>(p: &mut ListYield<T>) -> Union2<T, Finished> {
    let mut elem = p.items.get((p.at) as usize).cloned();
    if elem.is_none() {
        return Union2::<T, Finished>::U2(finished());
    }
    p.at = p.at + 1;
    return Union2::<T, Finished>::U1(emitted(elem.as_ref().unwrap().clone()));
}

// ===== core/string.rs =====
use crate::core_iterator::*;
use crate::core_list::*;
use crate::unions::*;

pub fn iter__3(str: String) -> StrYield {
    return StrYield { text: str, at: 0 };
}

#[derive(Clone, Debug)]
pub struct StrYield {
    pub text: String,
    pub at: i32,
}

pub fn next__3(p: &mut StrYield) -> Union2<char, Finished> {
    let mut chr = p.text.chars().nth((p.at) as usize);
    if chr.is_none() {
        return Union2::<char, Finished>::U2(finished());
    }
    p.at = p.at + 1;
    return Union2::<char, Finished>::U1(emitted(chr.unwrap()));
}

// ===== main.rs =====
#![allow(non_snake_case, non_camel_case_types, unused_mut, unused_parens, unused_imports, dead_code, unreachable_code, unused_variables, path_statements, unused_must_use, suspicious_double_ref_op)]
#[path = "unions.rs"]
pub mod unions;
#[path = "core/array.rs"]
pub mod core_array;
#[path = "core/console.rs"]
pub mod core_console;
#[path = "core/iterator.rs"]
pub mod core_iterator;
#[path = "core/list.rs"]
pub mod core_list;
#[path = "core/string.rs"]
pub mod core_string;

use crate::core_array::*;
use crate::core_console::*;
use crate::core_iterator::*;
use crate::core_list::*;
use crate::core_string::*;

pub trait Random<T> {
    fn next_random(&mut self) -> T;
}

pub struct CyclicRandom<T: Clone + 'static> {
    values: Vec<T>,
    i: i32,
}

impl<T: Clone + 'static> CyclicRandom<T> {
    pub fn new(values: Vec<T>) -> Self {
        Self {
            values,
            i: 0,
        }
    }
}

impl<T: Clone + 'static> Random<T> for CyclicRandom<T> {

    fn next_random(&mut self) -> T {
        let mut value = self.values.get((self.i % (self.values.len() as i32)) as usize).cloned().unwrap();
        self.i = self.i + 1;
        return value;
    }
}

pub fn draw(random_i32: &mut dyn Random<i32>, random_string: &mut dyn Random<String>, console: &mut dyn Console) {
    let mut n: i32 = random_i32.next_random();
    let mut s: String = random_string.next_random();
    println(console, &(format!("{}: {}", s, n)));
}

pub fn lucky_number(random_i32: &mut dyn Random<i32>) -> i32 {
    return random_i32.next_random();
}

pub fn main() {
    let mut console = StdOutConsole::new();
    let mut random_i32 = CyclicRandom::<i32>::new(vec![10, 20, 30]);
    let mut random_string = CyclicRandom::<String>::new(vec!["a".to_string(), "b".to_string()]);
    draw(&mut random_i32, &mut random_string, &mut console);
    draw(&mut random_i32, &mut random_string, &mut console);
    println(&mut console, &(format!("lucky: {}", random_i32.next_random())));
    println(&mut console, &(format!("again: {}", lucky_number(&mut random_i32))));
}

// ===== unions.rs =====
// Generated by the Salvo compiler: enums for union types.

#[derive(Clone, Debug)]
pub enum Union2<T1, T2> {
    U1(T1),
    U2(T2),
}

impl<T1, T2> Union2<T1, T2> {
    pub fn u1(&self) -> &T1 {
        match self {
            Union2::U1(v) => v,
            _ => panic!("unreachable union arm"),
        }
    }
    pub fn u1_mut(&mut self) -> &mut T1 {
        match self {
            Union2::U1(v) => v,
            _ => panic!("unreachable union arm"),
        }
    }
    pub fn u2(&self) -> &T2 {
        match self {
            Union2::U2(v) => v,
            _ => panic!("unreachable union arm"),
        }
    }
    pub fn u2_mut(&mut self) -> &mut T2 {
        match self {
            Union2::U2(v) => v,
            _ => panic!("unreachable union arm"),
        }
    }
}

impl<T1, T2> std::fmt::Display for Union2<T1, T2>
where
    T1: std::fmt::Display,
    T2: std::fmt::Display,
{
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            Union2::U1(v) => write!(f, "{}", v),
            Union2::U2(v) => write!(f, "{}", v),
        }
    }
}
