crates/salvo-backend-rust/tests/snapshots/codegen_tests__golden_loops_rust.snap
---
source: crates/salvo-backend-rust/tests/codegen_tests.rs
expression: combined
---
// ===== core/console.rs =====

pub trait Console {
    fn print(&mut self, message: &String);
}

pub struct StdOutConsole {
}

impl StdOutConsole {
    pub fn new() -> Self {
        Self { }
    }
}

impl Console for StdOutConsole {
    fn print(&mut self, message: &String) {
        print!("{}", message)
    }
}

pub fn println(console: &mut dyn Console, message: &String) {
    console.print(message);
    console.print(&("\n".to_string()));
}

// ===== core/result.rs =====

pub fn ok<T: Clone>(value: T) -> T {
    return value;
}

pub fn err<T: Clone>(value: T) -> T {
    return value;
}

// ===== main.rs =====
#![allow(non_snake_case, non_camel_case_types, unused_mut, unused_parens, unused_imports, dead_code, unreachable_code, unused_variables, path_statements, unused_must_use, suspicious_double_ref_op)]
#[path = "unions.rs"]
pub mod unions;
#[path = "core/console.rs"]
pub mod core_console;
#[path = "core/result.rs"]
pub mod core_result;

use crate::core_console::*;
use crate::core_result::*;
use crate::unions::*;

pub fn range(start: i32, end: i32) -> Vec<i32> {
    let mut __yielded: Vec<i32> = Vec::new();
    let mut i = start;
    while (({ let __t = i; i += 1; __t }) < end) {
        __yielded.push(i - 1);
    }
    return __yielded;
}

pub fn main() {
    let mut console = StdOutConsole::new();
    let mut i = 0;
    let mut last = ({
let mut __loop1: Option<i32> = None;
let mut __loop1_ran = false;
while (({ let __t = i; i += 1; __t }) < 4) {
__loop1_ran = true;
__loop1 = Some(i * 10);
}
if !__loop1_ran {
__loop1 = Some(-1);
}
__loop1.unwrap()
});
    println(&mut console, &(format!("last: {}", last)));
    let mut j = 9;
    let mut never = ({
let mut __loop2: Option<i32> = None;
let mut __loop2_ran = false;
while j < 3 {
__loop2_ran = true;
__loop2 = Some(j);
}
if !__loop2_ran {
__loop2 = Some(-1);
}
__loop2.unwrap()
});
    println(&mut console, &(format!("never: {}", never)));
    let mut found = ({
let mut __loop3: Option<i32> = None;
for mut x in range(0, 10) {
if x * x > 10 {
    __loop3 = Some(x);
    break;
}
__loop3 = Some(x);
}
__loop3
});
    if found.is_some() {
        let mut f = found.unwrap();
        println(&mut console, &(format!("found: {}", f)));
    }
    let mut __loop4_ran = false;
    for mut x in range(0, 0) {
        __loop4_ran = true;
        println(&mut console, &("unreachable".to_string()));
    }
    if !__loop4_ran {
        println(&mut console, &("empty range".to_string()));
    }
    let mut k = 0;
    let mut capped = ({
let mut __loop5: Option<i32> = None;
while k < 5 {
k += 1;
if k == 3 {
    break;
}
__loop5 = Some(k);
}
__loop5
});
    println(&mut console, &(format!("capped: {}", capped.unwrap())));
    let mut n = 0;
    let mut verdict: Union2<i32, String> = (match ({
let mut __loop6: Option<Union2<String, i32>> = None;
let mut __loop6_ran = false;
while n < 3 {
__loop6_ran = true;
if n == 2 {
    __loop6 = Some(Union2::<String, i32>::U2(ok(n)));
    break;
}
n += 1;
__loop6 = Some(Union2::<String, i32>::U1(err("not yet".to_string())));
}
if !__loop6_ran {
__loop6 = Some(Union2::<String, i32>::U1(err("empty".to_string())));
}
__loop6.unwrap()
}) { Union2::U1(__v) => Union2::<i32, String>::U2(__v), Union2::U2(__v) => Union2::<i32, String>::U1(__v), });
    match verdict {
        Union2::U1(_) => {
            println(&mut console, &(format!("ok: {}", *verdict.u1())));
        }
        Union2::U2(_) => {
            println(&mut console, &(format!("err: {}", verdict.u2().clone())));
        }
    }
}

// ===== unions.rs =====
// Generated by the Salvo compiler: enums for union types.

#[derive(Clone, Debug)]
pub enum Union2<T1, T2> {
    U1(T1),
    U2(T2),
}

impl<T1, T2> Union2<T1, T2> {
    pub fn u1(&self) -> &T1 {
        match self {
            Union2::U1(v) => v,
            _ => panic!("unreachable union arm"),
        }
    }
    pub fn u2(&self) -> &T2 {
        match self {
            Union2::U2(v) => v,
            _ => panic!("unreachable union arm"),
        }
    }
}

impl<T1, T2> std::fmt::Display for Union2<T1, T2>
where
    T1: std::fmt::Display,
    T2: std::fmt::Display,
{
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            Union2::U1(v) => write!(f, "{}", v),
            Union2::U2(v) => write!(f, "{}", v),
        }
    }
}
