crates/salvo-backend-rust/tests/snapshots/codegen_tests__golden_qualifiers_rust.snap
---
source: crates/salvo-backend-rust/tests/codegen_tests.rs
expression: combined
---
// ===== core/console.rs =====

pub trait Console {
    fn print(&mut self, message: &String);
}

pub struct StdOutConsole {
}

impl StdOutConsole {
    pub fn new() -> Self {
        Self { }
    }
}

impl Console for StdOutConsole {
    fn print(&mut self, message: &String) {
        print!("{}", message)
    }
}

pub fn println(console: &mut dyn Console, message: &String) {
    console.print(message);
    console.print(&("\n".to_string()));
}

// ===== core/result.rs =====

pub fn ok<T: Clone>(value: T) -> T {
    return value;
}

pub fn err<T: Clone>(value: T) -> T {
    return value;
}

// ===== main.rs =====
#![allow(non_snake_case, non_camel_case_types, unused_mut, unused_parens, unused_imports, dead_code, unreachable_code, unused_variables, path_statements, unused_must_use, suspicious_double_ref_op)]
#[path = "unions.rs"]
pub mod unions;
#[path = "core/console.rs"]
pub mod core_console;
#[path = "core/result.rs"]
pub mod core_result;

use crate::core_console::*;
use crate::core_result::*;
use crate::unions::*;

#[derive(Clone, Debug)]
pub struct Person {
    pub name: String,
    pub surname: Option<String>,
    pub age: i32,
}

pub fn Surname_qualifies(person: &Person) -> bool {
    return person.surname.is_some();
}

pub fn Positive_qualifies(int: i32) -> bool {
    return int > 0;
}

pub fn full_name(person: &Person) -> String {
    return person.name.clone();
}

pub fn full_name__Surname(person: &Person) -> String {
    return format!("{} {}", person.name.clone(), person.surname.as_ref().unwrap().clone());
}

pub fn describe(console: &mut dyn Console, person: &Person) {
    if Surname_qualifies(person) {
        println(console, &(full_name__Surname(person)));
    } else {
        println(console, &(full_name(person)));
    }
}

pub fn check(console: &mut dyn Console, n: i32) {
    if Positive_qualifies(n) {
        println(console, &(format!("{} is positive", n)));
    } else {
        println(console, &(format!("{} is not positive", n)));
    }
}

pub fn main() {
    let mut console = StdOutConsole::new();
    describe(&mut console, &(Person { name: "Roland".to_string(), surname: Some("Elliott".to_string()), age: 36 }));
    describe(&mut console, &(Person { name: "Anon".to_string(), age: 3, surname: None }));
    check(&mut console, 5);
    check(&mut console, -2);
    let mut current: Option<i32> = Some(3);
    while current.is_some() {
        let mut c = current.unwrap();
        println(&mut console, &(format!("tick {}", c)));
        current = if c > 1 {
Some(c - 1)
} else {
None
};
    }
    let mut inner: Union2<String, i32> = Union2::<String, i32>::U1(ok("yes".to_string()));
    let mut nested: Union2<Union2<String, i32>, bool> = Union2::<Union2<String, i32>, bool>::U1(ok(inner));
    if matches!(nested, Union2::U1(_)) {
        let mut back: Union2<String, i32> = nested.u1().clone();
        if matches!(back, Union2::U1(_)) {
            println(&mut console, &(format!("inner ok: {}", back.u1().clone())));
        }
    }
}

// ===== unions.rs =====
// Generated by the Salvo compiler: enums for union types.

#[derive(Clone, Debug)]
pub enum Union2<T1, T2> {
    U1(T1),
    U2(T2),
}

impl<T1, T2> Union2<T1, T2> {
    pub fn u1(&self) -> &T1 {
        match self {
            Union2::U1(v) => v,
            _ => panic!("unreachable union arm"),
        }
    }
    pub fn u2(&self) -> &T2 {
        match self {
            Union2::U2(v) => v,
            _ => panic!("unreachable union arm"),
        }
    }
}

impl<T1, T2> std::fmt::Display for Union2<T1, T2>
where
    T1: std::fmt::Display,
    T2: std::fmt::Display,
{
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            Union2::U1(v) => write!(f, "{}", v),
            Union2::U2(v) => write!(f, "{}", v),
        }
    }
}
