crates/salvo-backend-rust/tests/snapshots/codegen_tests__golden_unions_rust.snap
---
source: crates/salvo-backend-rust/tests/codegen_tests.rs
expression: combined
---
// ===== core/array.rs =====
use crate::core_iterator::*;
use crate::core_list::*;
use crate::unions::*;

pub fn iter<T: Clone + 'static>(array: Vec<T>) -> ArrayYield<T> {
    return ArrayYield { items: array, at: 0 };
}

#[derive(Clone, Debug)]
pub struct ArrayYield<T: Clone + 'static> {
    pub items: Vec<T>,
    pub at: i32,
}

pub fn next<T: Clone + 'static>(pass: &mut ArrayYield<T>) -> Union2<T, Finished> {
    let mut elem = pass.items.get((pass.at) as usize).cloned();
    if elem.is_none() {
        return Union2::<T, Finished>::U2(finished());
    }
    pass.at = pass.at + 1;
    return Union2::<T, Finished>::U1(emitted(elem.as_ref().unwrap().clone()));
}

// ===== core/console.rs =====
use crate::core_iterator::*;
use crate::core_string::*;

pub trait Console {
    fn print(&mut self, message: &String);
}

pub struct StdOutConsole {
}

impl StdOutConsole {
    pub fn new() -> Self {
        Self { }
    }
}

impl Console for StdOutConsole {
    fn print(&mut self, message: &String) {
        print!("{}", message)
    }
}

pub fn println(console: &mut dyn Console, message: &String) {
    console.print(message);
    console.print(&("\n".to_string()));
}

// ===== core/iterator.rs =====

#[derive(Clone, Debug)]
pub struct Finished {
}

pub fn emitted<T: Clone + 'static>(value: T) -> T {
    return value;
}

pub fn finished() -> Finished {
    return Finished {  };
}

// ===== core/list.rs =====
use crate::core_array::*;
use crate::core_iterator::*;
use crate::unions::*;

pub fn iter__2<T: Clone + 'static>(list: Vec<T>) -> ListYield<T> {
    return ListYield { items: list, at: 0 };
}

#[derive(Clone, Debug)]
pub struct ListYield<T: Clone + 'static> {
    pub items: Vec<T>,
    pub at: i32,
}

pub fn next__2<T: Clone + 'static>(pass: &mut ListYield<T>) -> Union2<T, Finished> {
    let mut elem = pass.items.get((pass.at) as usize).cloned();
    if elem.is_none() {
        return Union2::<T, Finished>::U2(finished());
    }
    pass.at = pass.at + 1;
    return Union2::<T, Finished>::U1(emitted(elem.as_ref().unwrap().clone()));
}

// ===== core/result.rs =====
use crate::core_iterator::*;

pub fn ok<T: Clone + 'static>(value: T) -> T {
    return value;
}

pub fn err<T: Clone + 'static>(value: T) -> T {
    return value;
}

// ===== core/string.rs =====
use crate::core_iterator::*;
use crate::core_list::*;
use crate::unions::*;

pub fn iter__3(str: String) -> StrYield {
    return StrYield { text: str, at: 0 };
}

#[derive(Clone, Debug)]
pub struct StrYield {
    pub text: String,
    pub at: i32,
}

pub fn next__5(pass: &mut StrYield) -> Union2<char, Finished> {
    let mut chr = pass.text.chars().nth((pass.at) as usize);
    if chr.is_none() {
        return Union2::<char, Finished>::U2(finished());
    }
    pass.at = pass.at + 1;
    return Union2::<char, Finished>::U1(emitted(chr.unwrap()));
}

// ===== main.rs =====
#![allow(non_snake_case, non_camel_case_types, unused_mut, unused_parens, unused_imports, dead_code, unreachable_code, unused_variables, path_statements, unused_must_use, suspicious_double_ref_op)]
#[path = "unions.rs"]
pub mod unions;
#[path = "core/array.rs"]
pub mod core_array;
#[path = "core/console.rs"]
pub mod core_console;
#[path = "core/iterator.rs"]
pub mod core_iterator;
#[path = "core/list.rs"]
pub mod core_list;
#[path = "core/result.rs"]
pub mod core_result;
#[path = "core/string.rs"]
pub mod core_string;

use crate::core_console::*;
use crate::core_iterator::*;
use crate::core_result::*;
use crate::core_string::*;
use crate::unions::*;

pub fn parse_age(input: i32) -> Union2<i32, String> {
    if input >= 0 {
        return Union2::<i32, String>::U1(ok(input));
    }
    return Union2::<i32, String>::U2(err("negative age".to_string()));
}

pub fn describe(result: &Union2<i32, String>) -> String {
    let mut msg = match result {
        Union2::U1(_) => {
            format!("age {}", *result.u1())
        }
        Union2::U2(_) => {
            format!("error: {}", result.u2().clone())
        }
    };
    return msg;
}

pub fn main() {
    let mut console = StdOutConsole::new();
    let mut good = parse_age(36);
    println(&mut console, &(describe(&good)));
    let mut bad = parse_age(-1);
    println(&mut console, &(describe(&bad)));
    let mut precise: Union3<String, String, bool> = Union3::<String, String, bool>::U1(ok("yes".to_string()));
    if matches!(precise, Union3::U2(_)) {
        println(&mut console, &(format!("err str: {}", precise.u2().clone())));
    } else if matches!(precise, Union3::U1(_)) {
        println(&mut console, &(format!("ok: {}", precise.u1().clone())));
    } else {
        println(&mut console, &(format!("err bool: {}", *precise.u3())));
    }
    let mut value = match good {
        Union2::U1(_) => {
            *good.u1()
        }
        Union2::U2(_) => {
            return;
        }
    };
    println(&mut console, &(format!("value plus one is {}", value + 1)));
}

// ===== unions.rs =====
// Generated by the Salvo compiler: enums for union types.

#[derive(Clone, Debug)]
pub enum Union2<T1, T2> {
    U1(T1),
    U2(T2),
}

impl<T1, T2> Union2<T1, T2> {
    pub fn u1(&self) -> &T1 {
        match self {
            Union2::U1(v) => v,
            _ => panic!("unreachable union arm"),
        }
    }
    pub fn u2(&self) -> &T2 {
        match self {
            Union2::U2(v) => v,
            _ => panic!("unreachable union arm"),
        }
    }
}

impl<T1, T2> std::fmt::Display for Union2<T1, T2>
where
    T1: std::fmt::Display,
    T2: std::fmt::Display,
{
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            Union2::U1(v) => write!(f, "{}", v),
            Union2::U2(v) => write!(f, "{}", v),
        }
    }
}

#[derive(Clone, Debug)]
pub enum Union3<T1, T2, T3> {
    U1(T1),
    U2(T2),
    U3(T3),
}

impl<T1, T2, T3> Union3<T1, T2, T3> {
    pub fn u1(&self) -> &T1 {
        match self {
            Union3::U1(v) => v,
            _ => panic!("unreachable union arm"),
        }
    }
    pub fn u2(&self) -> &T2 {
        match self {
            Union3::U2(v) => v,
            _ => panic!("unreachable union arm"),
        }
    }
    pub fn u3(&self) -> &T3 {
        match self {
            Union3::U3(v) => v,
            _ => panic!("unreachable union arm"),
        }
    }
}

impl<T1, T2, T3> std::fmt::Display for Union3<T1, T2, T3>
where
    T1: std::fmt::Display,
    T2: std::fmt::Display,
    T3: std::fmt::Display,
{
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            Union3::U1(v) => write!(f, "{}", v),
            Union3::U2(v) => write!(f, "{}", v),
            Union3::U3(v) => write!(f, "{}", v),
        }
    }
}
